--- a/system/wtfos/30-60-mbps.md
+++ b/system/wtfos/30-60-mbps.md
@@ -23,10 +23,9 @@ opkg install boost-bitrate_0.0.5_pigeon-glasses.ipk
 ```
 {% endcode %}
 
-После установки переходим в конфигураторе в автозапуск(Startup) и смотрим что процесс запущен
+Для проверки успешной установки переходим в Конфигураторе в Автозапуск(Startup) и смотрим что процесс запущен. Или в Менеджере пакетов в настройках отображения выбираем "All" и "Installed"  При настройках по-умолчанию устанновленный пакет не отображается. 
+![Packet_man_installed](https://user-images.githubusercontent.com/120513139/216817556-08994db6-a90a-4270-adf0-eb0f4bb09957.jpg)
 
-В менеджере пакетов он все равно не будет отображаться
+Перезагрузить очки на всякий случай.
 
-Перезагрузить очки на всякий случай
-
-Включаем квад и видим битрейт 59.9мбит
+Включаем квад и видим битрейт 59.9Мбит/29.9Мбит.
