--- a/system/wtfos/30-60-mbps.md
+++ b/system/wtfos/30-60-mbps.md
@@ -18,7 +18,7 @@ description: пакет не в официальном репозитории п
 ```
 cd /blackbox
 export http_proxy="http://127.0.0.1:8089"
-wget https://github.com/funneld/djifpv_boost_bitrate/releases/download/v0.0.5/boost-bitrate_0.0.5_pigeon-glasses.ipk
+wget http://github.com/funneld/djifpv_boost_bitrate/releases/download/v0.0.5/boost-bitrate_0.0.5_pigeon-glasses.ipk
 opkg install boost-bitrate_0.0.5_pigeon-glasses.ipk
 ```
 {% endcode %}
