--- a/system/wtfos/30-60-mbps.md
+++ b/system/wtfos/30-60-mbps.md
@@ -23,7 +23,8 @@ opkg install boost-bitrate_0.0.5_pigeon-glasses.ipk
 ```
 {% endcode %}
 
-Для проверки успешной установки переходим в Конфигураторе в Автозапуск(Startup) и смотрим что процесс запущен. Или в Менеджере пакетов в настройках отображения выбираем "All" и "Installed"  При настройках по-умолчанию устанновленный пакет не отображается. 
+Для проверки успешной установки переходим в Конфигураторе в Автозапуск(Startup) и смотрим что процесс запущен. Или в Менеджере пакетов в настройках отображения выбираем "All" и "Installed"  При настройках по-умолчанию установленый пакет не отображается.
+
 ![Packet_man_installed](https://user-images.githubusercontent.com/120513139/216817556-08994db6-a90a-4270-adf0-eb0f4bb09957.jpg)
 
 Перезагрузить очки на всякий случай.
